--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			<section data-ng-view></section>
 		</div>
 		<!-- angular-route.min.js is mandatory to implement routing -->
-		<script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-        <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+		<script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+        <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
 
         <script src="public/scripts/app/app.js"></script> <!-- include routing rules -->
         <script src="public/scripts/controller/controller.js"></script> <!-- include angular controller -->
